[package]
name = "hackassembler"
version = "0.1.0"
authors = ["Eric L. Dattore <eric.dattore@gmail.com>"]

[lib]
name = "libhackasm"
path = "src/lib.rs"
test = true

[[bin]]
name = "hackasm"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 2

[dependencies.regex]
version = "*"
